; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_ssl.c_ssl_test_setup.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_ssl.c_ssl_test_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.testcase_t = type { i32 }

@the_key = common dso_local global i32 0, align 4
@the_cert = common dso_local global i32 0, align 4
@disable_tls_11_and_12 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.testcase_t*)* @ssl_test_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ssl_test_setup(%struct.testcase_t* %0) #0 {
  %2 = alloca %struct.testcase_t*, align 8
  store %struct.testcase_t* %0, %struct.testcase_t** %2, align 8
  %3 = call i32 (...) @init_ssl()
  %4 = call i32 (...) @ssl_getkey()
  store i32 %4, i32* @the_key, align 4
  %5 = load i32, i32* @the_key, align 4
  %6 = call i32 @EVUTIL_ASSERT(i32 %5)
  %7 = load i32, i32* @the_key, align 4
  %8 = call i32 @ssl_getcert(i32 %7)
  store i32 %8, i32* @the_cert, align 4
  %9 = load i32, i32* @the_cert, align 4
  %10 = call i32 @EVUTIL_ASSERT(i32 %9)
  store i64 0, i64* @disable_tls_11_and_12, align 8
  %11 = load %struct.testcase_t*, %struct.testcase_t** %2, align 8
  %12 = call i8* @basic_test_setup(%struct.testcase_t* %11)
  ret i8* %12
}

declare dso_local i32 @init_ssl(...) #1

declare dso_local i32 @ssl_getkey(...) #1

declare dso_local i32 @EVUTIL_ASSERT(i32) #1

declare dso_local i32 @ssl_getcert(i32) #1

declare dso_local i8* @basic_test_setup(%struct.testcase_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
